# MyGitAction

./: README.md
.github/workflows/: benchmarks.yml  ci.yml
cmake/: CMakeLists.txt
src/: main.cpp  math_utils.cpp  math_utils.hpp
tests/: test.cpp
